--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-#
-# This file contains configuration flags to customize your site
-#
 
 # Name of your site (displayed in the header)
 name: Phani Teja
@@ -9,28 +6,14 @@ name: Phani Teja
 description: NLP notes
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: 
 
-#
-# Flags below are optional
-#
-
-# Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
   github: aphaniteja
   instagram:
   linkedin: phaniteja3
-  pinterest:
-  rss: Follow me
   twitter: aphaniteja
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
-
+  
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
